--- a/4.html
+++ b/4.html
@@ -134,7 +134,7 @@
         let currentQuestionIndex = 0;
         const questions = [
             { question: "For Man City, what is the approximate range of the goal differences across the seasons?", options: ["28-80", "4-48", "-20 - 10", "4 - 24"] },
-            { question: "Which axis can be considered as a discrete variable?", options: ["Goal Difference", "Football Club", "Both", "None"] },
+            { question: "Which axis can be considered as a independent variable?", options: ["Goal Difference", "Football Club", "Both", "None"] },
             { question: "Which year was an outlier performance from Leicester Football Club?", options: ["2014", "2015", "2016", "2017"] },
             { question: "Between West Ham and Everton, which club had a better goal difference across the seasons?", options: ["West Ham Club", "Everton"] },
             { question: "From the various performances of the clubs across multiple seasons, which are the extreme performances?", options: ["2017 season of Man City", "2017 season of West Ham", "2015 season of Liverpool", "2016 season of Everton"] },
