--- a/7.html
+++ b/7.html
@@ -100,12 +100,12 @@
             { question: "How engaging are the explanations?", options: ["Not engaging", "Slightly engaging", "Moderately engaging", "Very engaging", "Extremely engaging"], type: "radio" },
             { question: "What are the strengths of the explanations?", options: [], type: "textarea" },
             { question: "What are the weaknesses of the explanations?", options: [], type: "textarea" },
-            { question: "The sequence of explanations on different topics felt natural.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" }
-            // { question: "The annotations help in learning data visualization.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
-            // { question: "The annotations are highly engaging.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
-            // { question: "The annotations were distracting during the learning process.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
-            // { question: "What are the strengths of the annotations?", options: [], type: "textarea" },
-            // { question: "What are the weaknesses of the annotations?", options: [], type: "textarea" }
+            { question: "The sequence of explanations on different topics felt natural.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
+            { question: "The annotations help in learning data visualization.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
+            { question: "The annotations are highly engaging.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
+            { question: "The annotations were distracting during the learning process.", options: ["Strongly Disagree", "Disagree", "Neutral", "Agree", "Strongly Agree"], type: "radio" },
+            { question: "What are the strengths of the annotations?", options: [], type: "textarea" },
+            { question: "What are the weaknesses of the annotations?", options: [], type: "textarea" }
         ];
 
         let currentQuestionIndex = 0;
