--- a/test.html
+++ b/test.html
@@ -78,13 +78,14 @@
     <script>
         // Initialize Firebase
         firebase.initializeApp({
-            apiKey: "AIzaSyDHbDwI2hiUuzbYu2HnDUoHsMZlG2FXHSA",
-            authDomain: "eg-1-screening-box.firebaseapp.com",
-            projectId: "eg-1-screening-box",
-            storageBucket: "eg-1-screening-box.appspot.com",
-            messagingSenderId: "383916013180",
-            appId: "1:383916013180:web:563bc1b4df4ae0b749bbf9",
-            measurementId: "G-2XS5GDDQMW"
+            apiKey: "AIzaSyATsMWldBm4WMrs9_1i0aSSVMFATKfzksg",
+  authDomain: "eg-1-testing-annotated-bar.firebaseapp.com",
+  databaseURL: "https://eg-1-testing-annotated-bar-default-rtdb.firebaseio.com",
+  projectId: "eg-1-testing-annotated-bar",
+  storageBucket: "eg-1-testing-annotated-bar.appspot.com",
+  messagingSenderId: "331184741358",
+  appId: "1:331184741358:web:24f55734252ec0b0688cff",
+  measurementId: "G-V8T7210NKK"
         });
         
         const database = firebase.database();
