--- a/5.html
+++ b/5.html
@@ -80,10 +80,11 @@
             <img src="bar_chart_B_.png" alt="Consent Form Image">
         </div>
         <p>
-            Try to answer the following questions (6 questions) based on the box plot shown above. Each question will have multiple choice answers. Click "Next" to proceed to the next question. You can skip a question if you are unsure of the answer.
-        </p>
+            <i>Try to answer the following questions (6 questions) based on the box plot shown above. Each question will have multiple choice answers. Click "Next" to proceed to the next question. You can skip a question if you are unsure of the answer.
+            </i>
+            </p>
         <form id="nextSurveyForm">
-            <div id="questionContainer"></div>
+            <b><div id="questionContainer"></div></b>
             <div style="text-align: center;">
                 <button type="button" onclick="handleNextClick()">Next</button>
             </div>
@@ -94,6 +95,7 @@
         firebase.initializeApp({
             apiKey: "AIzaSyATsMWldBm4WMrs9_1i0aSSVMFATKfzksg",
   authDomain: "eg-1-testing-annotated-bar.firebaseapp.com",
+  databaseURL: "https://eg-1-testing-annotated-bar-default-rtdb.firebaseio.com",
   projectId: "eg-1-testing-annotated-bar",
   storageBucket: "eg-1-testing-annotated-bar.appspot.com",
   messagingSenderId: "331184741358",
